--- a/themes/admin/media/css/stylesheet.css
+++ b/themes/admin/media/css/stylesheet.css
@@ -266,3 +266,5 @@ table.form2 td {
     vertical-align: middle;
     width: 70%;
 }
+#Show_idcard >input[type="text"]{width:100px;}
+.alertred{color:red;}
