--- a/media/css/style.css
+++ b/media/css/style.css
@@ -12,7 +12,7 @@ font-size:13px; font-weight:normal; background-color:white;}
 p { margin:8px 0; padding:0 0 8px;}
 a {text-decoration:none; color:#0575d4;}
 a:hover {color:#0190fe;}
-
+.bold{font-weight:bold;color:#0080FF}
 /* ------- Remove Chrome's border around active fields ------- */
 
 *:focus {outline: none;}
