--- a/themes/default/media/css/style.css
+++ b/themes/default/media/css/style.css
@@ -18,8 +18,8 @@ a:hover {color:#0190fe;}
 *:focus {outline: none;}
 
 
-#wrap{position:relative; padding:0; margin:0 auto; width:100%; height:auto;}
-.main {position:relative; padding:0; margin:0 auto; width:1016px; height:192px; background: url("../images/bg-header4.png") no-repeat;}
+#wrap{position:relative; padding:0; margin:0 auto; width:100%; height:auto;clear:both;}
+.main {clear:both;position:relative; padding:0; margin:0 auto; width:1016px; height:192px; background: url("../images/bg-header4.png") no-repeat;}
 .logo{float:left; margin-top:3px; width:104px; height:104px; background: url(../images/logo.png); background-repeat:no-repeat;}
 .name{float:left; margin-left:5px; margin-top:15px; width:616px; height:91px; background: url(../images/name.png) no-repeat;}
 .animal{position:relative; float:right;  margin-right:48px;  margin-left:-20px; margin-top:-40px; width:265px; height:142px; background: url(../images/animal.png); background-repeat:no-repeat; z-index:1;}
@@ -44,10 +44,10 @@ a:hover {color:#0190fe;}
 
 	/* login */
 	.login {position:absolute; left:16px; width:232px; height:183px;  background: url(../images/bg-login.png) no-repeat;}
-	.text-loginSystem{display:block; margin-left:15px; color:#c6057d;  font-size:14px; font-weight:bold;}
+	.text-loginSystem{display:block; margin-left:25%; color:#c6057d;  font-size:14px; font-weight:bold;}
 	
-	.btn_go{ float:left; margin-left: 30px;  margin-top:5px; width:51px; height:21px; background: url(../images/btn-go_reg.png) no-repeat; border:0; cursor:pointer;}
-	.btn_go:hover{width:51px; height:21px; background: url(../images/btn-go_hot.png) no-repeat;border:0;}
+	input.btn_go[type="submit"]{margin-left:36%;margin-top:5%; width:51px; height:33px; background: url(../images/btn-go_reg.png) no-repeat; border:0; cursor:pointer;}
+	input.btn_go[type="submit"]:hover{width:51px; height:33px; background: url(../images/btn-go_hot.png) no-repeat;border:0;}
 	.input_box {background: transparent;border: 0;}
 	.username-field {width:168px;height: 38px;	float:left;	margin-top: 10px; margin-left:25px;	background: url(../images/username-field.png) center left no-repeat;}
 	.username-field:hover {	background: url(../images/username-field-hover.png) center left no-repeat;}
@@ -56,23 +56,11 @@ a:hover {color:#0190fe;}
 	
 	input[type="text"], input[type="password"] {width: 120px;height: 16px;margin-top: 10px;	margin-left: 10px;	font-family: Verdana, Arial;font-size: 13px;color: #2d2d2d;}
 	
-	input#remember-me[type="checkbox"] {position: absolute;	left: -999px;}
-
-	input#remember-me[type="checkbox"] + label { height: 24px; float: left; margin-top: -10px; margin-left: 25px;  padding-left: 28px;display: block;position: relative;
-		line-height: 24px;	background: url(../images/checkbox-off.png) top left no-repeat;}
-
-	input#remember-me[type="checkbox"]:checked + label {background: url(../images/checkbox-on.png) top left no-repeat;}
-
-	input#remember-me[type="checkbox"]:checked:hover + label, input[type="checkbox"]:checked:focus + label {background: url(../images/checkbox-on-hover.png) top left no-repeat;}
-
-	input#remember-me[type="checkbox"]:not(:checked):hover + label, input[type="checkbox"]:not(:checked):focus + label {
-		background: url(../images/checkbox-off-hover.png) top left no-repeat;
-	}
-
-	.forgot-usr-pwd a { margin-top:5px; margin-left:30px; float:left; color:#dc1992; text-decoration:none; font-size:13px;}
+	.forgot-usr-pwd{float:left;width:200ppx; margin-left:45px; margin-top:7px;}
+	.forgot-usr-pwd a{color:#dc1992; text-decoration:none; font-size:13px;}
 	.forgot-usr-pwd a:hover, .forgot-usr-pwd a:focus {text-decoration: underline;}
 
-	
+	#boxAdd{margin-top:28px;margin-left:29%}
 
 
 /* col2 */
@@ -85,14 +73,15 @@ a:hover {color:#0190fe;}
 	#news-pr ul li{ background:url(../images/bullet1.png) no-repeat 0px 7px; padding-left:20px; line-height:25px;}
 	#news-pr ul li a{color:#4f4f4f;}
 	#news-pr ul li a:hover{color:#0985dc;}
-	.btn_readAll {float:right; width:75px; height:21px; background:url(../images/btn_readAll_reg.png) no-repeat; border:0; cursor:pointer;}
-	.btn_readAll:hover {float:right; width:75px; height:21px; background:url(../images/btn_readAll_hot.png) no-repeat; border:0; cursor:pointer;}
+	input[type="submit"].btn_readAll {float:right; width:75px; height:21px; background:url(../images/btn_readAll_reg.png) no-repeat; border:0; cursor:pointer;}
+	input[type="submit"].btn_readAll:hover {float:right; width:75px; height:21px; background:url(../images/btn_readAll_hot.png) no-repeat; border:0; cursor:pointer;}
 
 	/* news- */
 	.pic ul {list-style-type:none; margin-left:10px; padding:0; }
 	.pic ul li{display:inline; padding-left:10px;}
 	.title-rabies{color:#d58e06; font-weight:bold; font-size:14px;}
 	.content-rabies{ margin-left:20px;}
+
 
 /* counter */
 .title_counter{color:#c6057d; font-size:14px; font-weight:bold;}
