--- a/themes/default/media/css/merge_style.css
+++ b/themes/default/media/css/merge_style.css
@@ -4,6 +4,7 @@ Design by http://www.favouritedesign.com
 */
 
 /* ### GENERAL ### */
+.inline{margin:none;}
 #register form{margin:8px 14px 20px;}
 #register .row{background-color:#FFFFFF;margin-left:1px;margin-top:-8px;}
 label.error{color:red;width:50%;display:inline}
@@ -12,3 +13,8 @@ label.alertred{font-size: 12px;	color: #FF0000;display:inline;}
 {width: 120px;height: 16px;margin-top: 10px;
 	margin-left: 10px;	font-family: Verdana, Arial;font-size: 13px;color: #2d2d2d;
 	box-shadow:none;background:none;border:none}
+
+#register .form-horizontal .controls{clear:both;display:inline-block;margin-left:84px;margin-top:10px;}
+#register .form-horizontal .control-label{clear:both;padding-top:13px;}
+#register #boxAdd{margin-top:28px;margin-left:36%}
+
