--- a/media/css/style.css
+++ b/media/css/style.css
@@ -114,6 +114,7 @@ input[type="reset"],.btn_cancel{display:block; width:88px; height:26px; backgrou
 .footer{margin-top:15px;height:31px; padding-left:47px; width:96%; position:relative; padding-top:7px; background-image: url(../images/bg_footer.jpg); background-repeat: repeat-x;}
 #report{
 	margin-top:30px;
+	margin-left:10px;
 }
 #report #title{
 	font-size:12px;
@@ -214,3 +215,99 @@ ul.sublist label.error,label.error{color:red;width:50%;}
 .user-online{background:url('../images/user-online.png') no-repeat;width:24px;height: 24px;border:none;display:inline-block;}
 .user-offline{background:url('../images/user-offline.png') no-repeat;width:24px;height: 24px;border:none;display:inline-block;}
 .tbvaccine p{margin:0px;}
+#report #title{display:none;}
+#report #area_btn_print{display:none;}
+
+
+.tbreport
+{
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 12px;
+    background: #fff;
+    margin:0;
+    margin-bottom:10px;
+    width: 100%;
+    border-collapse: collapse;
+    text-align: left;
+   
+}
+.tbreport th
+{
+    font-size: 12px;
+    font-weight: bold;
+    padding: 10px 5px 12px 5px;
+    border-top: 2px solid #999;
+    border-bottom: 2px solid #999;
+    border-left: 0px solid #ccc;
+    border-right: 0px solid #ccc;
+    text-align:left;
+    background-color:#fff;
+     height:30px;
+   
+}
+.tbreport td
+{
+    color:#333;
+    padding:6px 3px;
+    height:25px;
+    border-top: 0px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-left: 0px solid #ccc;
+    border-right: 0px solid #ccc;
+    vertical-align: top;
+}
+
+.tbreport td.B { font-weight:700;}
+.tbreport td .para1{margin-left:20px;}
+
+.tbreport td strong { font-weight:700;}
+.tbreport td.red, span.red { color:#F00;}
+.tbreport tr:hover td,.tblist tr.active td {}
+.tbreport tr.total { border-top:2px dotted #666; border-bottom:2px dotted #666; font-weight:700; background:url(../images/bg_pattern.png);}
+.tbreport td.topic { background:#F5F5F5;}
+.tbreport td.topic p { padding:5px 0 5px 15px;}
+.tbreport td a:link {color:#800000; text-decoration:underline;}
+.tbreport td a:visited {color:#800000; text-decoration:underline;}
+.tbreport td a:hover {color: #F60; text-decoration:underline;}
+.tbreport td a:active {color: #800000; text-decoration:underline;}
+
+.tbreport1
+{
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 12px;
+    background: #fff;
+    margin:0;
+    margin-bottom:10px;
+    width: 100%;
+    border-collapse: collapse;
+    text-align: left;
+   
+}
+.tbreport1 th
+{
+    font-size: 12px;
+    font-weight: bold;
+    padding: 10px 5px 12px 5px;
+    border-top: 2px solid #999;
+    border-bottom: 2px solid #999;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    text-align:center;
+    background-color:#fff;
+     height:30px;
+   
+}
+.tbreport1 td
+{
+    color:#333;
+    padding:6px 3px;
+    height:25px;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    vertical-align: top;
+    text-align:center;
+}
+.tbreport1 th.B{font-weight:900;font-size:14px;}
+#btn_printout{width:auto;margin-left:50%;}
