--- a/media/css/style.css
+++ b/media/css/style.css
@@ -29,12 +29,12 @@ a:hover {color:#0190fe;}
 .userlogedin.userlogedin_text2{color:#2151b3;}
 .btn_logout{width:122px; height:26px; cursor:pointer; border:none; background: url(../images/btn_logout_reg2.png) no-repeat;display:block;}
 .btn_logout:hover{border:none; background:url(../images/btn_logout.png) no-repeat; }
-#bg_dog1{float:left;width:99%; background: url(../images/bg_dog1.jpg) repeat-x;margin-top:-36px;}
+#bg_dog1{float:left;width:100%; background: url(../images/bg_dog1.jpg) repeat-x;margin-top:-36px;}
 
 
 
 /* content */
-#content { padding-left:10px; float:left; width:90%;  /*margin-left:50px;*/ padding-top:30px;margin:0 auto; }
+#content { padding-left:10px; float:left; width:99%;  /*margin-left:50px;*/ padding-top:30px;margin:0 auto; }
 .welcome{color:#e31788; font-size:15px;}
 .nameMember{color:black; font-size:15px;margin:60px 0px 0px 57px;}
 .path{margin-left:800px; color:#89898a;}
@@ -184,6 +184,7 @@ ul.sublist label{display:inline-block;width:100px;}
 .btn_edit{background:url('../images/pencil-icon.png') no-repeat;width:24px;height: 24px;border:none;display:inline-block;}
 .btn_delete{background:url('../images/cross.png') no-repeat;width:16px;height: 16px;border:none;display:inline-block;}
 .btn_add{background:url('../images/btn_add.png') no-repeat;width:183px; height:29px;cursor:pointer; display:inline-block;border:none;float:right;}
+.btn_add1{background:url('../images/add.png') no-repeat;width:106px; height:25px;cursor:pointer; display:inline-block;border:none;float:right;}
 .btn_syring{background:url('../images/syringe/syringe-icon.png') no-repeat;
 				  width:24px;height:24px;border:none;display:inline-block;margin}
 
@@ -263,9 +264,9 @@ ul.sublist label.error,label.error{color:red;width:50%;}
 }
 
 .tbreport td.B { font-weight:700;}
-.tbreport td .para1{margin-left:20px;}
+.tbreport td.para1{margin-left:20px;}
 
-.tbreport td strong { font-weight:700;}
+.tbreport td strong {font-weight:700;}
 .tbreport td.red, span.red { color:#F00;}
 .tbreport tr:hover td,.tblist tr.active td {background:#FDB8EE;font-weight:bold;}
 .tbreport tr.total { border-top:2px dotted #666; border-bottom:2px dotted #666; font-weight:700; background:url(../images/bg_pattern.png);}
