--- a/media/css/style.css
+++ b/media/css/style.css
@@ -19,7 +19,7 @@ a:hover {color:#0190fe;}
 *:focus {outline: none;}
 
 /* main */
-.main {position:relative; padding:0; margin:5px auto; width:100%; height:107px; background: url(../images/bg_rabies-3.jpg) no-repeat;}
+.main {position:relative; padding:0; margin:0px; width:100%; height:107px; background: url(../images/bg_rabies-3.jpg) no-repeat;}
 .name{float:left; margin-left:90px; margin-top:0px; width:724px; height:70px; background: url(../images/name2.png) no-repeat;}
 .dog1{float:left; /*margin-left:793px; */width:265px; height:142px; background: url(../images/dog1.png) no-repeat; /*position:absolute;*/}
 .logedin{float:left;/*margin-left:280px; */margin-top:45px;}
@@ -96,6 +96,40 @@ input[type="reset"],.btn_cancel{display:block; width:88px; height:26px; backgrou
 	border-color: #CCCCCC;
     border-style: solid;
     border-width: 1px 0;
+}
+
+
+.tbdead th{
+	text-align:right; padding-right:15px; line-height:40px;
+	border-color: #CCCCCC;
+    border-style: dashed solid;
+    border-width: 1px 1px 1px 0;
+}
+
+.tbdead td{
+	/*border-color: #CCCCCC;
+    border-style: solid;
+    border-width: 1px 0;*/
+    padding:5px;
+}
+.tbdead td span.topic{
+	width:100px;
+	display:inline-block;
+	text-align:right;
+}	
+.tbdead td span.topic.radio{
+margin-right:11px;
+}	
+.tbdead ul{width:600px;}
+.tbdead ul li{
+	list-style: none;
+	width:85px;
+	display:inline-block;
+	vertical-align: top;
+	padding:5px;
+}
+.tbdead ul li.topic{
+	width:277px;
 }
 .tbvaccine{width:100%;margin:10px 0px;padding:0px;border-collapse: collapse;}
 .tbvaccine th{	
@@ -223,7 +257,6 @@ ul.sublist label.error,label.error{color:red;width:50%;}
 #report #description{display:none;}
 #report .right{margin-top:-17px;}
 
-
 .tbreport
 {
     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
@@ -278,6 +311,7 @@ ul.sublist label.error,label.error{color:red;width:50%;}
 .tbreport td a:active {color: #800000; text-decoration:underline;}
 .tbreport tr.para1{text-align:center;}
 .tbreport tr.para1 td.pad-left{text-align:left;padding-left:40px;}
+.tbreport tr.para1 td.pad-left2{text-align:left;padding-left:60px;}
 .tbreport1
 {
     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
@@ -318,3 +352,5 @@ ul.sublist label.error,label.error{color:red;width:50%;}
 }
 .tbreport1 th.B{font-weight:900;font-size:14px;}
 #btn_printout{float:right;margin-top:10px;}
+#report #multiAccordion  #reference{font-size:11px;}
+.page-break{margin:-1px 0px; padding:0px;height:0px;}
