--- a/themes/admin/media/css/stylesheet.css
+++ b/themes/admin/media/css/stylesheet.css
@@ -268,8 +268,8 @@ table.form2 td {
 }
 #Show_idcard >input[type="text"]{width:100px;}
 .alertred{color:red;}
-ul.list{list-style: none;display:inline-block;float: left;margin-left:-34px;}
-ul.list li{vertical-align: middle;margin-left:10px;float:left;width:150px;}
-ul.sublist li{vertical-align: middle;margin:10px 0px;}
-ul.sublist{list-style:none;width:70%;}
-ul.sublist label{display:inline-block;width:100px;}
+#form1 ul.list{list-style: none;display:inline-block;float: left;margin-left:-34px;}
+#form1 ul.list li{vertical-align: middle;margin-left:10px;float:left;width:150px;}
+#form1 ul.sublist li{vertical-align: middle;margin:10px 0px;}
+#form1 ul.sublist{list-style:none;width:70%;}
+#form1 ul.sublist label{display:inline-block;width:100px;}
