--- a/themes/map/media/css/stylesheet.css
+++ b/themes/map/media/css/stylesheet.css
@@ -2,22 +2,23 @@ html {
 				height: 100%;
     			min-height: 100%;
                 font-size: 100%;
-                height: 100%;
+                width: 100%;
                 margin-bottom: 1px; /* Always show a scrollbar to avoid jumping when the scrollbar appears  */
               	 
                 }
 
 body {
 				height: 100%;
+				width:100%;
     			min-height: 100%;
                	font-family:Tahoma,Verdana,Arial,Helvetica,sans-serif;
                 color: #363636;     
                 font-size: 13px;
-                background:url(../images/bg.gif) repeat-x;width:3px; height:155px;
+                background:url(../images/bg_headerGIS.jpg) repeat-x;width:1px; height:160px;
              
                 }
 #loading{background:url(../images/loadingmove.gif) no-repeat;width:78px; height:20px;position:absolute;visibility:hidden;}
-#header{background:url(../images/head_gis.jpg) no-repeat;width:700px;height:155px;margin:-8px;padding:0px;}
+#header{background:url(../images/headerGIS.jpg) no-repeat;width:11014px;height:160px;margin:-8px;padding:0px;}
 #map	{width:1166px; border-color: #CCCCCC #CCCCCC #999999;border-style: solid;border-width: 1px;
     		box-shadow: 0 2px 5px rgba(64, 64, 64, 0.1);padding:5px;overflow:hidden;background: #FFF;margin-left:-6px;clear:both;margin-top:8px;}
 
